# sfml-cmake-template

./: CMakeLists.txt  README.md
